--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "gulp-sourcemaps": "^2.6.5",
         "gulp-twig": "^1.2.0",
         "npm": "^7.5.4",
-        "del": "^1.0.0"
+        "del": "^1.0.0",
+        "@tarekraafat/autocomplete.js": "^10.2.7"
     },
     "eslintConfig": {
         "extends": "eslint:recommended",
